--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^1.3.4",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
