--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "client",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -9,22 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
-    "@uiball/loaders": "^1.2.6",
-    "axios": "^1.3.4",
-    "js-cookie": "^3.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@uiball/loaders": "^1.3.0",
+    "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.12.1",
     "redux": "^4.2.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "vite": "^4.3.9"
   }
 }
