Both package.json files were updated from dependencies to devDependencies as this project isn't supposed to be in production mode

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "author": "Lauris",
   "license": "ISC",
   "type": "module",
-  "dependencies": {
+  "devDependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
