--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "devDependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "@uiball/loaders": "^1.3.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -19,12 +22,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "redux": "^4.2.1",
-    "socket.io-client": "^4.6.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
-    "@vitejs/plugin-react": "^3.1.0",
+    "socket.io-client": "^4.6.2",
     "vite": "^4.3.9"
   }
 }
